data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/DataCloudQuerySetting__mdt.object-meta.xml
<CustomObject>
    <description>Store the data cloud sql query and related settings used by different use case of Data Cloud Query Service LWC</description>
    <label>Data Cloud Query Setting</label>
    <pluralLabel>Data Cloud Query Settings</pluralLabel>
</CustomObject>