data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/Dataspace__c.field-meta.xml
<CustomField>
    <fullName>Dataspace__c</fullName>
    <description>Data cloud data space name where query will be executed</description>
    <inlineHelpText>Data cloud data space name where query will be executed</inlineHelpText>
    <label>Dataspace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>