data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description>Named credential api name used for connecting Data cloud home org.</description>
    <inlineHelpText>Named credential api name used for connecting Data cloud home org.</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>