data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>Data cloud sql query used by specific uses cases that used by LWC to display the data</description>
    <inlineHelpText>Data cloud sql query. e.g. SELECT Id__c, FirstName__c FROM Individual__dlm 
or 
SELECT Id__c, FirstName__c FROM ssot__Account__dlm where Id__c:accountId</inlineHelpText>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>