data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/RecordBasedFilterConfig__c.field-meta.xml
<CustomField>
    <fullName>RecordBasedFilterConfig__c</fullName>
    <description>Record object fields and sql query filter condition pair</description>
    <inlineHelpText>Record object fields and sql query filter condition pair. e.g., contactId:Id|varchar,accountId:accountId|varchar</inlineHelpText>
    <label>Record-Based Filter Config</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>