data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/RecordFilterObject__c.field-meta.xml
<CustomField>
    <fullName>RecordFilterObject__c</fullName>
    <description>Salesforce object name which fields are referred in RecordFilterConfig</description>
    <inlineHelpText>Salesforce object name which fields are referred in RecordFilterConfig</inlineHelpText>
    <label>Record Filter Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>