data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/UseCurrentRecord__c.field-meta.xml
<CustomField>
    <fullName>UseCurrentRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag true when query uses filter condition based on current record field. In this case LWC component must provide current record Id.</description>
    <label>Use Current Record</label>
    <type>Checkbox</type>
</CustomField>