data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/UseDataCloudRestApi__c.field-meta.xml
<CustomField>
    <fullName>UseDataCloudRestApi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this flag is set to true then DataCloud Query Service will use the data cloud connect rest api to execute this query. It is required to setup named credential and auth provider</description>
    <label>Use Data Cloud Rest Api</label>
    <type>Checkbox</type>
</CustomField>