data-cloud-query-components/main/default/objects/DataCloudQuerySetting__mdt/fields/WorkloadName__c.field-meta.xml
<CustomField>
    <fullName>WorkloadName__c</fullName>
    <description>This value will be passed to data cloud when executing the query, this may help later to debug the related issue by salesforce support team</description>
    <label>WorkloadName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>